--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 		<div>
 			<input type="text" name="name" minlength="3" maxlength="50" id="name" required>
 		</div>
-		<lable for="portfolio">Portfolio</label>
+		<label for="portfolio">Portfolio</label>
 		
 		<div>
 			<input name="portfolio" type="url" id="portfolio" required>
